# md-models

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE.md  README.md  build.rs  docker-compose-tests.yml  index.html  mkdocs.yml  pyproject.toml
.github/scripts/: generate_types.sh
.github/workflows/: assets.yml  docs.yml  format.yml  lint.yml  npm_bundler.yml  npm_web.yml  publish.yml  publish_pypi.yml  publish_test_pypi.yml  test-generation.yml  test.yml  test_assets.yml  test_npm_web.yml  test_wasm.yml
docs/: book.toml  index.md  syntax.md
docs/src/: SUMMARY.md  introduction.md  quickstart.md
docs/src/cli/: cli.md  code_generation.md  generation.md  llm.md  pipelines.md  schema_validation.md
docs/src/examples/: database_models.md  examples.md  hello_md_models.md  union_types.md
docs/src/exporters/: apis.md  documentation.md  exporters.md  languages.md  schemas.md
docs/src/faq/: faq.md  validation.md
docs/src/syntax/: best_practices.md  descriptions.md  enums.md  full_example.md  objects.md  preambles.md  property_options.md  semantics.md  syntax.md
docs/syntax/: configuration.md  enumerations.md  index.md  ontologies.md  types.md
docs/templates/: equation.md
docs/types/: equation.md  unit-definition.md
search/: search_index.json
src/: attribute.rs  datamodel.rs  error.rs  exporters.rs  lib.rs  main.rs  object.rs  option.rs  parser.rs  pipeline.rs  primitives.rs  schema.rs  tree.rs  validation.rs  xmltype.rs
src/avro/: schema.rs
src/bindings/: python.rs  wasm.rs
src/json/: datatype.rs  export.rs  import.rs  parser.rs  schema.rs  validation.rs
src/jsonld/: export.rs  schema.rs
src/linkml/: export.rs  import.rs  schema.rs
src/llm/: embedding.rs  extraction.rs  input.rs  patch.rs  refine_prompt.md  update_prompt.md  update_sysprompt.md
src/markdown/: attribute.rs  frontmatter.rs  object.rs  parser.rs  position.rs
src/python/: bindings.rs
syntax/: index.html
syntax/configuration/: index.html
syntax/enumerations/: index.html
syntax/ontologies/: index.html
syntax/types/: index.html
templates/: golang.jinja  graphql.jinja  julia.jinja  markdown-compact.jinja  markdown.jinja  mermaid.jinja  mkdocs.jinja  owl.jinja  protobuf.jinja  python-dataclass.jinja  python-macros.jinja  python-pydantic-xml.jinja  python-pydantic.jinja  python-sdrdm-macros.jinja  python-sdrdm.jinja  rust.jinja  shacl.jinja  shex.jinja  typescript-zod.jinja  typescript.jinja  xml-schema.jinja
tests/: integration_tests.rs  test_pipeline.toml  test_pipeline_per_spec.toml  test_pipeline_per_spec_invalid.toml
tests/data/: expected_context.jsonld  expected_golang.go  expected_golang_gorm.go  expected_graphql.graphql  expected_internal_full_schema.json  expected_internal_schema.json  expected_internal_schema_inheritance.json  expected_invalid_complete.json  expected_json_schema.json  expected_json_schema_openai.json  expected_julia.jl  expected_linkml.yml  expected_mermaid.md  expected_meta_json_schema.json  expected_mkdocs.md  expected_owl.ttl  expected_proto.proto  expected_pydantic.py  expected_pydantic_unitdef.py  expected_python_dc.py  expected_python_pydantic_xml.py  expected_python_sdrdm.py  expected_rust.rs  expected_rust_forbidden.rs  expected_rust_ld.rs  expected_sdrdm_full_schema.json  expected_sdrdm_schema.json  expected_sdrdm_schema_inheritance.json  expected_shacl.ttl  expected_shex.shex  expected_typescript.ts  expected_typescript_zod.ts  expected_typescript_zod_json_ld.ts  expected_xml_schema.xsd  invalid_dataset.json  model.md  model_compact.md  model_duplicates.md  model_forbidden_names.md  model_full_documentation.md  (+25 more)
tests/envs/go/: Dockerfile  generated.go  generated_test.go  go.mod
tests/envs/julia/: test.jl
tests/envs/python/: Dockerfile  requirements.txt  test_dataclasses.py  test_pydantic.py  test_pydantic_xml.py
tests/envs/rust/: Cargo.toml  Dockerfile
tests/envs/rust-ld/: Cargo.toml  Dockerfile
tests/envs/rust-ld/src/: lib.rs
tests/envs/rust/src/: lib.rs
tests/envs/typescript/: Dockerfile  package-lock.json  package.json  test.js  test.ts  tsconfig.json
types/: README.md  index.html
types/equation/: equation-internal.json  equation.json  equation.md  equation.xsd  gen.toml  index.html
types/unit-definition/: gen.toml  index.html  unit-definition-internal.json  unit-definition.json  unit-definition.md  unit-definition.xsd
