[package]
name = "mdmodels"
authors = ["Jan Range <jan.range@simtech.uni-stuttgart.de>"]
description = "A tool to generate models, code and schemas from markdown files"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/FAIRChemistry/md-models"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
pulldown-cmark = "0.8.0"
serde_json = { "version" = "1.0.116", features = ["preserve_order"] }
regex = "1.10.4"
serde_with = "3.8.0"
minijinja = "2.0.1"
minijinja-embed = "2.0.1"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
gray_matter = "0.2.7"
reqwest = { version = "0.12.4", features = ["blocking", "native-tls-vendored"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
colored = "2.1.0"
convert_case = "0.6.0"
toml = "0.8.14"
textwrap = "0.16.1"
pyo3 = { version = "0.23.2", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[features]
python = ["pyo3"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[build-dependencies]
minijinja-embed = "2.0.1"

[[bin]]
name = "md-models"
path = "src/bin/cli.rs"

[dev-dependencies]
assert_cmd = "2.0.14"
pretty_assertions = "1.4.0"
